--- a/stream-overlay/src/effects/common/effects-common.css
+++ b/stream-overlay/src/effects/common/effects-common.css
@@ -8,6 +8,9 @@
 .effect-config-section {
   margin: 1rem auto auto auto;
 }
+.effect-config-section label {
+  padding-right: 0.5rem;
+}
 
 .image-selection {
   display: table;
@@ -20,5 +23,19 @@
 }
 .image-selection label {
   text-align: right;
-  padding-right: 0.5rem;
+}
+
+.media {
+  width: 800px;
+  height: 600px;
+  margin: auto;
+}
+.media img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.obs-url input {
+  width: 40em;
 }
